# saltlick-rs

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  typos.toml
.github/: dependabot.yml
examples/: simple.rs  simple_async.rs
src/: bufread.rs  commonio.rs  crypter.rs  error.rs  key.rs  lib.rs  multibuf.rs  read.rs  state.rs  sync.rs  version.rs  write.rs
src/async_/: bufread.rs  commonio.rs  crypter.rs  mod.rs  read.rs  stream.rs  write.rs
tests/: ouroboros.rs
