[package]
name = "saltlick"
version = "0.4.1"
authors = ["Nick Stevens <nick@bitcurry.com>"]
edition = "2018"
description = "A library for encrypting and decrypting file streams using libsodium"
documentation = "https://docs.rs/saltlick"
homepage = "https://github.com/saltlick-crypto/saltlick-rs"
repository = "https://github.com/saltlick-crypto/saltlick-rs"
keywords = ["async", "cryptography", "libsodium", "security", "streaming"]
categories = ["cryptography", "filesystem"]
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "saltlick-crypto/saltlick-rs", branch = "master" }
codecov = { repository = "saltlick-crypto/saltlick-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "saltlick-crypto/saltlick-rs" }
is-it-maintained-open-issues = { repository = "saltlick-crypto/saltlick-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
async-stream = { version = "0.2.1", optional = true }
byteorder = "1.3"
bytes = "0.5"
futures = { version = "0.3", optional = true }
lazy_static = "1.0"
pem = "0.8"
pin-project-lite = { version = "0.2", optional = true }
simple_asn1 = "0.5"
sodiumoxide = "0.2.3"  # 0.2.3 required for `(push|pull)_to_vec`
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tokio = { version = "0.2", optional = true }

[dev-dependencies]
async-stream = "0.2"
proptest = "0.10"
rand = "0.7"
rand_xorshift = "0.2"
tempdir = "0.3"

[dev-dependencies.tokio]
version = "0.2"
features = ["fs", "io-util", "macros", "rt-threaded", "stream"]

[features]
default = []
io-async = ["async-stream", "futures", "pin-project-lite", "tokio"]
proptest-tests = []

[[example]]
name = "simple"

[[example]]
name = "simple_async"
required-features = ["io-async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
